Add Herring et al. (2022), PPP

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -854,4 +854,13 @@
   title = {A comprehensive workflow to analyze ensembles of globally inverted 2D electrical resistivity models},
   journal = {Journal of Applied Geophysics}
 }
+
+@Article{Herring2022,
+  doi = {10.1002/ppp.2141},
+  year = {2022},
+  author = {Herring, T. and Lewkowicz, A. G.},
+  title = {A systematic evaluation of electrical resistivity tomography for permafrost interface detection using forward modeling},
+  journal = {Permafrost and Periglacial Processes}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
